--- a/examples/index.html
+++ b/examples/index.html
@@ -7,32 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    
-    <!-- <script src="https://solid.github.io/solid-auth-client/dist/solid-auth-client.bundle.js"></script>
-    <script>
-        solid.auth.trackSession(session => {
-          if (!session){
-            console.log('The user is not logged in');
-            async function login(idp) {
-                const session = await solid.auth.currentSession();
-                if (!session)
-                    await solid.auth.login(idp);
-                else
-                    alert(`Logged in as ${session.webId}`);
-            }
-            login('https://solid.authing.cn'); 
-          } else {
-            console.log(`The user is ${session.webId}`);
-          }
-        });
-        solid.auth.fetch('https://leinue.solid.authing.cn/public/test.html')
-        .then(response => {
-            return response.text();
-        }).then(data => {
-            console.log(data);
-        });
-    </script> -->
-    <script src="../dist/solid-authing-browser.min.js?v=5"></script>
+    <script src="../dist/solid-authing-browser.min.js?v=6"></script>
     <script>
         const main = async () => {
             const solidAuthing = new SolidAuthing({
@@ -42,9 +17,9 @@
 
             const sa = await solidAuthing.getAuthingInsatance();
 
-            const registerResult = await sa.login();
+            const loginResult = await sa.register();
 
-            console.log(registerResult);
+            console.log(loginResult);
 
             // const solidSession = await sa.loginInSolid();
 
